# tauri-vue-template

./: .gitattributes  .gitignore  Cargo.toml  README.md  dprint.json  eslint.config.js  eslint.config.ts  index.html  miho.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json  vite.config.js  vite.config.ts
.zed/: settings.json
app/: index.html  package.json  tsconfig.json  vite.config.ts
app/src/: App.vue  main.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: api.rs  command.rs  error.rs  lib.rs  main.rs  plugin.rs
app/src-tauri/src/window/: desktop.rs  mobile.rs  mod.rs
app/src/assets/style/: base.css
app/src/lib/: bindings.ts  error.ts  prototype.ts  toast.ts
app/src/router/: index.ts
app/src/stores/: counter.ts
app/src/types/: global.d.ts
scripts/: build-app.rs  clean.rs  run-clippy.rs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  command.rs  error.rs  lib.rs  plugin.rs  window.rs
src-tauri/src/window/: desktop.rs  mod.rs
src/api/: bindings.ts
src/assets/: index.css
src/assets/style/: base.css  main.css
src/commands/: index.ts
src/lib/: error.ts  prototype.ts
src/router/: index.ts
src/types/: global.d.ts  index.d.ts
src/views/home/: index.vue
