[package]
name = "tauri-vue-template"
version = "0.1.0"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lib]
name = "template_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
futures = "0.3"
itertools = "0.14"
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.3"
tauri-plugin-persisted-scope = "2.2"
tauri-plugin-pinia = "3.7"
tauri-plugin-vue = "0.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tauri]
version = "2.5"
features = ["protocol-asset", "rustls-tls"]

[dependencies.tokio]
version = "1.45"
features = ["full"]

[target."cfg(windows)".dependencies]
tauri-plugin-process = "2.2"
tauri-plugin-single-instance = "2.2"
tauri-plugin-window-state = "2.2"

[target."cfg(windows)".dependencies.tauri-plugin-prevent-default]
version = "2.1"
features = ["unstable-windows"]

[build-dependencies.tauri-build]
version = "2.2"
features = []
