[package]
name = "tauri-vue-template"
version = "0.1.0"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lib]
name = "template_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
futures = "0.3"
itertools = "0.14"
tauri-plugin-dialog = "2.3"
tauri-plugin-fs = "2.4"
tauri-plugin-persisted-scope = "2.3"
tauri-plugin-pinia = "3"
tauri-plugin-vue = "1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tauri]
version = "2.7"
features = ["protocol-asset", "rustls-tls"]

[dependencies.tokio]
version = "1.47"
features = ["full"]

[target."cfg(windows)".dependencies]
tauri-plugin-process = "2.3"
tauri-plugin-single-instance = "2.3"
tauri-plugin-window-state = "2.4"

[target."cfg(windows)".dependencies.tauri-plugin-prevent-default]
version = "3"
features = ["platform-windows"]

[build-dependencies.tauri-build]
version = "2.3"
features = []
