[package]
name = "tauri-vue-template"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "template_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
specta.workspace = true
specta-typescript.workspace = true
tap.workspace = true
tauri-plugin-clipboard-manager.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-os.workspace = true
tauri-plugin-persisted-scope.workspace = true
tauri-plugin-pinia.workspace = true
tauri-specta.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dependencies.tauri]
version = "2.10"
features = ["protocol-asset", "rustls-tls"]

[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-prevent-default.workspace = true
tauri-plugin-process.workspace = true
tauri-plugin-single-instance.workspace = true

[build-dependencies.tauri-build]
version = "2.5"
features = []
